reduce boiler plate and add security