@@ -8,15 +8,13 @@ import org.jetbrains.annotations.Unmodifiable;
 import java.util.Collections;
 import java.util.List;
 
-public final class PlaceholderResult {
+public class PlaceholderResult {
     private final @NotNull PlaceholderResult.ResultType resultType;
     private final @NotNull @Unmodifiable List<Component> values;
-    private final @NotNull PlaceholderComponent placeholder;
 
-    private PlaceholderResult(@NotNull PlaceholderResult.ResultType resultType, @NotNull @Unmodifiable List<Component> values, @NotNull PlaceholderComponent placeholder) {
+    public PlaceholderResult(@NotNull PlaceholderResult.ResultType resultType, @NotNull @Unmodifiable List<Component> values) {
         this.resultType = resultType;
         this.values = values;
-        this.placeholder = placeholder;
     }
 
 
@@ -36,56 +34,53 @@ public final class PlaceholderResult {
         return values;
     }
 
-    /**
-     * Get the original placeholder component.
-     * @return the original placeholder
-     */
-    public @NotNull PlaceholderComponent getPlaceholder() {
-        return placeholder;
+
+    public static PlaceholderResult result(@NotNull PlaceholderResult.ResultType resultType, @NotNull List<Component> values) {
+        return new PlaceholderResult(resultType, Collections.unmodifiableList(values));
     }
 
-    public static PlaceholderResult result(@NotNull PlaceholderComponent placeholder, @NotNull PlaceholderResult.ResultType resultType, @NotNull List<Component> values) {
-        return new PlaceholderResult(resultType, Collections.unmodifiableList(values), placeholder);
+    public static PlaceholderResult result(@NotNull PlaceholderResult.ResultType resultType, @NotNull Component @NotNull... values) {
+        return new PlaceholderResult(resultType, List.of(values));
     }
 
-    public static PlaceholderResult result(@NotNull PlaceholderComponent placeholder, @NotNull PlaceholderResult.ResultType resultType, @NotNull Component @NotNull... values) {
-        return new PlaceholderResult(resultType, List.of(values), placeholder);
-    }
-
-    public static PlaceholderResult result(@NotNull PlaceholderComponent placeholder, @NotNull PlaceholderResult.ResultType resultType, @NotNull Component value) {
-        return new PlaceholderResult(resultType, Collections.singletonList(value), placeholder);
+    public static PlaceholderResult result(@NotNull PlaceholderResult.ResultType resultType, @NotNull Component value) {
+        return new PlaceholderResult(resultType, Collections.singletonList(value));
     }
 
 
-    public static PlaceholderResult error(@NotNull PlaceholderComponent placeholder, @NotNull List<Component> values) {
-        return new PlaceholderResult(PlaceholderResult.ResultType.ERROR, Collections.unmodifiableList(values), placeholder);
+    public static PlaceholderResult error(@NotNull List<Component> values) {
+        return new PlaceholderResult(PlaceholderResult.ResultType.ERROR, Collections.unmodifiableList(values));
     }
 
-    public static PlaceholderResult error(@NotNull PlaceholderComponent placeholder, @NotNull Component @NotNull... values) {
-        return new PlaceholderResult(PlaceholderResult.ResultType.ERROR, List.of(values), placeholder);
+    public static PlaceholderResult error(@NotNull Component @NotNull... values) {
+        return new PlaceholderResult(PlaceholderResult.ResultType.ERROR, List.of(values));
     }
 
-    public static PlaceholderResult error(@NotNull PlaceholderComponent placeholder, @NotNull Component value) {
-        return new PlaceholderResult(PlaceholderResult.ResultType.ERROR, Collections.singletonList(value), placeholder);
+    public static PlaceholderResult error(@NotNull Component value) {
+        return new PlaceholderResult(PlaceholderResult.ResultType.ERROR, Collections.singletonList(value));
+    }
+
+    PlaceholderResult finalise(PlaceholderComponent placeholderComponent) {
+        return new FinalPlaceholderResult(this, placeholderComponent);
     }
 
 
 
-    public static PlaceholderResult parsed(@NotNull PlaceholderComponent placeholder, @NotNull List<Component> values) {
-        return new PlaceholderResult(PlaceholderResult.ResultType.SUCCESS, Collections.unmodifiableList(values), placeholder);
+    public static PlaceholderResult parsed(@NotNull List<Component> values) {
+        return new PlaceholderResult(PlaceholderResult.ResultType.SUCCESS, Collections.unmodifiableList(values));
     }
 
-    public static PlaceholderResult parsed(@NotNull PlaceholderComponent placeholder, @NotNull Component @NotNull... values) {
-        return new PlaceholderResult(PlaceholderResult.ResultType.SUCCESS, List.of(values), placeholder);
+    public static PlaceholderResult parsed(@NotNull Component @NotNull... values) {
+        return new PlaceholderResult(PlaceholderResult.ResultType.SUCCESS, List.of(values));
     }
 
-    public static PlaceholderResult parsed(@NotNull PlaceholderComponent placeholder, @NotNull Component value) {
-        return new PlaceholderResult(PlaceholderResult.ResultType.SUCCESS, Collections.singletonList(value), placeholder);
+    public static PlaceholderResult parsed(@NotNull Component value) {
+        return new PlaceholderResult(PlaceholderResult.ResultType.SUCCESS, Collections.singletonList(value));
     }
 
 
-    public static PlaceholderResult unknown(@NotNull PlaceholderComponent placeholder) {
-        return new PlaceholderResult(PlaceholderResult.ResultType.SUCCESS, Collections.emptyList(), placeholder);
+    public static PlaceholderResult unknown() {
+        return new PlaceholderResult(PlaceholderResult.ResultType.SUCCESS, Collections.emptyList());
     }
 
     public enum ResultType {
